Created Swagger API documentstion for Post methods
Created Swagger API documentation for Comments

Created extended User methods & Swagger documentation

Created feature test for UserController

Added env files

Created feature tests for PostController

Created feature tests for CommentController
